-> Remove some dead links and update mailing list URLs and Copyright

--- a/homepage/input/development.html
+++ b/homepage/input/development.html
@@ -16,7 +16,7 @@ you're always welcome.</p>
   <a name="maillist">Development Mailing List</a></h3>
 
   <p>If you are interested in contributing to Enigma, please
-  <a href="http://mail.nongnu.org/mailman/listinfo/enigma-devel">subscribe to
+  <a href="https://lists.nongnu.org/mailman/listinfo/enigma-devel">subscribe to
   Enigma's development mailing list</a>. Listen and ask your questions. Answer
   questions of others, publish own contributions like levels or patches, or offer
   your help.</p>
@@ -130,11 +130,6 @@ you're always welcome.</p>
   <p>The Enigma <a href="$$refman$$">reference manual</a> explains the level
   format and all objects you can use in detail. You should at least cross read
   chapters 1 - 3 and remember that you can look up details about every object.<p>
-
-  <p>For your first experiments and as a practical guide to level coding, you
-  should have a look at the <a href="$$wiki$$">level development wiki</a>. It
-  focuses on the most common object features and gives you valuable code
-  snippets for many common tasks.</p>
 
   <p>You will find help on the <a href="$$development$$#maillist">developer
   mailing list</a> as well as in the <a href="http://www.mag-heut.net">forum</a>.
