--- a/homepage/input/development_de.html
+++ b/homepage/input/development_de.html
@@ -20,7 +20,7 @@ sind Sie jederzeit willkommen!</p>
   <a name="maillist">Entwickler-Mailingliste</a></h3>
 
   <p>Falls Sie Interesse haben, an Enigma t&auml;tig zu werden, melden Sie sich
-  bitte bei der <a href="http://mail.nongnu.org/mailman/listinfo/enigma-devel">
+  bitte bei der <a href="https://lists.nongnu.org/mailman/listinfo/enigma-devel">
   Entwickler-Mailingliste</a> an. H&ouml;ren Sie den Fragen anderer zu,
   stellen Sie eigene Fragen. Antworten Sie auf die Fragen anderer,
   ver&ouml;ffentlichen Sie eigene Beitr&auml;ge wie Levels oder Patches oder
@@ -152,12 +152,6 @@ sind Sie jederzeit willkommen!</p>
   k&ouml;nnen. Sie sollten zumindest die Kapitel 1-3 &uuml;berfliegen und
   daran denken, dass Sie Details &uuml;ber jedes Objekt hier nachschlagen
   k&ouml;nnen.<p>
-
-  <p>F&uuml;r Ihre ersten Experimente und als praktische Hilfe zur
-  Levelprogrammierung sollten Sie auch einen Blick auf das <a
-  href="$$wiki$$">Enigma-Wiki</a> werfen. Es konzentriert sich auf die
-  h&auml;ufigsten Features und gibt Ihnen wertvolle Codeausschnitte f&uuml;r
-  einige Standardprobleme an die Hand.</p>
 
   <p>Sie finden nat&uuml;rlich auch auf der <a
   href="$$development$$#maillist">Entwickler-Mailingliste</a> und im <a
