--- a/homepage/input/development_ru.html
+++ b/homepage/input/development_ru.html
@@ -15,7 +15,7 @@
   <a name="maillist">Список рассылки разработчиков</a></h3>
 
   <p>Если Вы заинтересованы в поддержке Enigma, пожалуйста
-  <a href="http://mail.nongnu.org/mailman/listinfo/enigma-devel">подпишитесь на
+  <a href="https://lists.nongnu.org/mailman/listinfo/enigma-devel">подпишитесь на
   список рассылки разработчиков Enigma</a>. Слушайте и задавайте свои вопросы. Отвечайте на вопросы
   остальных подписчиков, публикуйте свой вклад, наподобие уровней и патчей или предложите
   Вашу помощь.</p>
@@ -127,11 +127,6 @@
   <p><a href="$$refman$$">Справочное руководство</a> Enigma детально объясняет формат уровней
   и всех объектов, которые Вы можете использовать. Вам нужно хотя бы пробежаться глазами по
   главам 1 - 3 и помнить, что Вы можете найти подробное описание каждого объекта.<p>
-
-  <p>Для Ваших экспериментов и в качестве практического пособия к составлению уровней, Вы
-  должны взглянуть на <a href="$$wiki$$">wiki о разработке уровней</a>. В основном она уделяет внимание
-  самым общим возможностям объектов и предоставляет Вам достаточное количество примеров кода
-  для многих общих задач.</p>
 
   <p>Помощь Вы можете получить как в <a href="$$development$$#maillist">списке рассылки разработчиков</a>,
   так и на <a href="http://www.mag-heut.net">форуме</a>.
