--- a/homepage/input/faq_core.html
+++ b/homepage/input/faq_core.html
@@ -169,7 +169,7 @@ programs may be used as spyware to steal information about you. However, like
 many other games as well, Enigma redirects mouse and keyboard inputs, too:
 Function keys must be evaluated, mouse input is used as a force instead of
 coordinates. That's why the message appears. If you downloaded Enigma from our
-homepage, you should move Enigma into Kaspersky's trusted zone. If you want 
+homepage, you should move Enigma into Kaspersky's trusted zone. If you want
 to check for Enigma's integrity, use the checksums in the <a
 href="$$download$$">download section</a>.
 </p>
@@ -273,7 +273,7 @@ introduce not too many new game objects at once.</p>
 <h4><a name="s3q2">Why do you say there are 900+ levels? There are only 65, and they
 are all too easy.</a></h4>
 <p>When you start Enigma the first time, you'll start in the
-&quot;Tutorial level pack&quot;, which is composed of easier levels 
+&quot;Tutorial level pack&quot;, which is composed of easier levels
 for practice. If you find yourself prepared enough, you
 can switch to the &quot;real&quot; level packs: Click on the button
 labeled &quot;Level Pack&quot;, then &quot;Enigma&quot; on the right side and
@@ -312,8 +312,6 @@ If you need detailed information about an object, e.g. if you
 want to write a level, take a look at the <a href="$$refman$$">reference
 manual</a>. However, for this you'll have to know the name of the object.
 </p><p>
-If you need to know the name of an object, visit the Enigma
-Wiki at <a href="$$wiki$$" >$$wiki$$</a>.</p>
 
 
 <h4><a name="s3q5">I can't solve [insert any level]!</a></h4>
@@ -458,8 +456,7 @@ to help us with the tasks mentioned <a href="#s4q1">above</a>.</p>
 <p>Read the <a href="$$refman$$">reference manual</a>, visit <a
 href="http://www.mag-heut.net" >mag-heut.net</a>, or study the
 existing levels; they're in the subdirectories &quot;data/levels/&#8727;&quot;
-of your installation path. You might also find the Enigma Wiki at
-<a href="$$wiki$$" >$$wiki$$</a> interesting.
+of your installation path.
 </p><p>
 If it's too difficult for you to program your level, ask people
 on mag-heut.net for help -- they might convert your ideas to
@@ -492,8 +489,7 @@ liberal license as the rest of Enigma.</p>
 
 
 <h4><a name="s4q6">I want to use an object in my new level but don't know its name.</a></h4>
-<p>Visit the Enigma Wiki
-<a href="$$wiki$$" >$$wiki$$</a> or analyze a level in which it appears.</p>
+<p>Look into the reference manual or analyze a level in which it appears.</p>
 
 
 <h4><a name="s4q7">How can I compile Enigma on/for Windows?</a></h4>
@@ -606,9 +602,8 @@ A second argument for this was the availability of GIT as version control system
 The current bug tracker is still located at Berlios, until we transfer its
 content to Sourceforge. There also is an obselete bug tracker at Savannah.
 </p><p>
-Other services like the <a href="http://www.mag-heut.net">Forum</a> and the
-<a href="$$wiki$$">Wiki</a> started and are still running
-as private services supplied by Enigma users at their addresses.
+Other services like the <a href="http://www.mag-heut.net">Forum</a> started and are
+still running as private services supplied by Enigma users at their addresses.
 </p><p>
 The homepage is still served by Savannah. But this limits us to static
 content. Thus we reserved the domain <a href="http://enigma-game.org">enigma-game.org</a>,
