--- a/homepage/input/faq_core_de.html
+++ b/homepage/input/faq_core_de.html
@@ -345,8 +345,6 @@ einen Level schreiben wollen, werfen Sie einen Blick ins <a
 href="$$refman$$">Referenz-Handbuch</a>. Allerdings ben&ouml;tigen Sie hierf&uuml;r den
 Namen des Objektes, das Sie suchen.
 </p><p>
-Wenn Sie den Namen eines Objektes suchen, k&ouml;nnen Sie das im Enigma Wiki auf
-<a href="$$wiki$$" >$$wiki$$</a>.</p>
 
 
 <h4><a name="s3q5">Ich kann [f&uuml;ge beliebige Level ein] nicht l&ouml;sen!</a></h4>
@@ -501,9 +499,7 @@ href="#s4q1">Aufgaben</a> helfen.</p>
 <p>Lesen Sie dazu das <a href="$$refman$$">Referenz-Handbuch</a>, besuchen Sie
 <a href="http://www.mag-heut.net" >mag-heut.net</a> oder studieren Sie
 existierende Level; diese befinden sich im Unterverzeichnis
-&quot;data/levels/&#8727;&quot; des Installationsverzeichnisses. Sie finden
-sicherlich auch das Enigma Wiki unter
-<a href="$$wiki$$" >$$wiki$$</a> interessant.
+&quot;data/levels/&#8727;&quot; des Installationsverzeichnisses.
 </p><p>
 Falls es Ihnen schwer f&auml;llt, Ihre Level zu programmieren, fragen Sie die Leute
 auf mag-heut.net um Hilfe -- sie k&ouml;nnten Ihre Ideen in richtige Level
@@ -541,9 +537,8 @@ wurden.</p>
 
 <h4><a name="s4q6">Ich m&ouml;chte ein Objekt in meinem neuen Level verwenden, aber kenne nicht
 seinen Namen.</a></h4>
-<p>Besuchen Sie hierf&uuml;r das Enigma Wiki auf
-<a href="$$wiki$$" >$$wiki$$</a> oder analysieren Sie einen Level, in der das
-Objekt erscheint.</p>
+<p>Schauen Sie hierf&uuml;r in das Referenzhandbuch oder analysieren Sie einen Level,
+in der das Objekt erscheint.</p>
 
 
 <h4><a name="s4q7">Wie kann ich Enigma auf/f&uuml;r Windows kompilieren?</a></h4>
@@ -669,9 +664,9 @@ Der aktuelle Bug-Tracker befindet sich noch immer bei Berlios, bis wir seinen
 Inhalt nach Sourceforge transferieren. Es gibt auch noch einen veralteten
 Bug-Tracker auf Savannah.
 </p><p>
-Andere Dienste wie das <a href="http://www.mag-heut.net">Forum</a> und das
-<a href="$$wiki$$">Wiki</a> wurden als private Dienste von Enigma Nutzern gestartet
-und laufen nach wie vor unver&auml;ndert unter ihren Adressen.</p>
+Andere Dienste wie das <a href="http://www.mag-heut.net">Forum</a> wurden als private
+Dienste von Enigma Nutzern gestartet und laufen nach wie vor unver&auml;ndert unter
+ihren Adressen.</p>
 
 <p>Die Homepage steht nach wie vor auf Savannah. Dies limitiert uns auf statischen
 Inhalt. Deshalb haben wir die Domain <a href="http://enigma-game.org">enigma-game.org</a>
