--- a/homepage/input/faq_core_ru.html
+++ b/homepage/input/faq_core_ru.html
@@ -60,22 +60,22 @@ Enigma автоматически обновит список мировых рекордов, если Вы выбрали такое
 <p>Перейдите в меню настроек и выставьте &quot;Обновлять рейтинг&quot; в
 &quot;Авто&quot;. После этого Enigma будет пробовать автоматически обновлять
 результаты примерно раз в неделю.</p>
-<p>Если Вы хотите обновляться вручную, скачайте ratings.xml по ссылке, указанной 
+<p>Если Вы хотите обновляться вручную, скачайте ratings.xml по ссылке, указанной
 <a href="$$support$$#score">здесь</a> и скопируйте его в Вашу папку пользователя.</p>
 
 
 <h4><a name="s1q5">Что это за авто-обновления результатов/оценок? Я не хочу, чтобы
 приложение без спроса выходило в интернет!</a></h4>
-<p>Не беспокойтесь; Enigma не войдет в интернет, пока Вы не задействуете эту опцию 
+<p>Не беспокойтесь; Enigma не войдет в интернет, пока Вы не задействуете эту опцию
 в меню настроек: ищите кнопку с названием &quot;Обновлять рейтинг&quot;. По
 умолчанию она &quot;выключена&quot;, Вы можете как включить её так и выключить.
 </p>
-<p>Если Вы хотите обновляться вручную, скачайте ratings.xml по ссылке, указанной 
+<p>Если Вы хотите обновляться вручную, скачайте ratings.xml по ссылке, указанной
 <a href="$$support$$#score">здесь</a> и скопируйте его в Вашу папку пользователя.</p>
 
 
 <h4><a name="s1q6">В интернете я нашел уровень для Enigma и хочу сыграть на нём &#8230;</a></h4>
-<p>Если этот уровень создан в формате 1.0-xml, Вы можете просто скачать его и 
+<p>Если этот уровень создан в формате 1.0-xml, Вы можете просто скачать его и
 скопировать в подпапку &quot;levels/auto&quot; Вашей папки пользователя.
 После этого перезапустите Enigma, войдите в меню пакетов уровней, выберите группу
 &quot;User&quot; и пакет уровней &quot;Auto&quot;. Уровень теперь должен появиться
@@ -90,9 +90,9 @@ Enigma автоматически обновит список мировых рекордов, если Вы выбрали такое
 
 
 <h4><a name="s1q7">Как я могу сыграть на уровнях Sokoban через интернет?</a></h4>
-<p>Мы работаем над этим. Пока что Вы должны сами создать уровень Enigma. 
+<p>Мы работаем над этим. Пока что Вы должны сами создать уровень Enigma.
 Для этого Вы можете воспользоваться библиотекой ralf_sokoban,
-поищите в файлах уровней в поддиректории 
+поищите в файлах уровней в поддиректории
 &quot;data/levels/enigma_sokoban&quot; в директории, куда Вы установили игру.</p>
 
 
@@ -103,7 +103,7 @@ Enigma автоматически обновит список мировых рекордов, если Вы выбрали такое
 
 <h4><a name="s2q1">Иногда мой экран становится чёрным, но потом Enigma снова
 работает, как будто ничего не произошло?</a></h4>
-<p>Это Ваш хранитель экрана. Движения мыши при игре в Enigma иногда 
+<p>Это Ваш хранитель экрана. Движения мыши при игре в Enigma иногда
 не воспринимаются хранителем экрана, и поэтому он считает, что Вы не пользуетесь
 компьютером. Вы можете как отключить Ваш храниитель экрана, так и попытаться
 переключиться из оконного режима в полноэкранный (поищите &quot;меню настроек&quot;).</p>
@@ -123,7 +123,7 @@ gnome-screensaver-command --inhibit
 <h4><a name="s2q2">Enigma не запускается, она выдает сообщение наподобие
     &quot;mismatch of state.xml and enigma.score&quot;.</a></h4>
 <p>Пожалуйста, пришлите нам копии двух файлов (смотрите ниже &quot;Где находятся
-файлы enigma.score и state.xml?&quot;). Если Вы установили более раннюю версию 
+файлы enigma.score и state.xml?&quot;). Если Вы установили более раннюю версию
 Enigma, пожалуйста, прикрепите файл &quot;enigmarc.lua2&quot; из той же директории.
 После этого мы сможем изучить проблему.
 </p><p>
@@ -136,12 +136,12 @@ Enigma, пожалуйста, прикрепите файл &quot;enigmarc.lua2&quot; из той же директор
     &quot;Datatype error: Type: invalid data type Value exception, Message:
     Value '44734' must be less than or equal to maxinclusive '32767'&quot;.
     (Значение может отличаться.)</a></h4>
-<p>Это известная проблема. Её вызывает файл результатов версии 0.92, который 
+<p>Это известная проблема. Её вызывает файл результатов версии 0.92, который
 превышает 9 часов. Сделайте резервную копию &quot;enigmarc.lua2&quot; (в Вашей
 папке пользователя), потом или удалите, или переименуйте его (после этого Вы
 потеряете все Ваши результаты версии 0.92), или откройте его в текстовом редакторе.
 В нём найдите строку, которая содержит значение Вашего сообщения об ошибке
-(например, в нашем случае &quot;44734&quot;) и удалите эту строку (Вы лишитесь 
+(например, в нашем случае &quot;44734&quot;) и удалите эту строку (Вы лишитесь
 только результатов превышающих 9 часов). Сохраните &quot;enigmarc.lua2&quot; и
 удалите &quot;state.xml&quot; и &quot;enigma.score&quot;, чтобы заставить Enigma
 создать их заново. Перезапустите Enigma и проверьте, всё ли работает.</p>
@@ -169,7 +169,7 @@ Enigma, он сообщает &quot;Обнаружен сканер клавиатуры&quot;.</a></h4>
 также перенаправляет ввод с мыши и клавиатуры: нужно работать с функциональными
 клавишамии, получать со ввода мыши ускорение, а не только координаты. Вот почему
 появляется сообщение. Если Вы скачали Enigma с нашей домашней страницы, Вам следует
-поместить Enigma в доверенную зону Kaspersky. Если Вы хотите убедиться в целостности 
+поместить Enigma в доверенную зону Kaspersky. Если Вы хотите убедиться в целостности
 Enigma, воспользуйтесь контрольными суммами в <a href="$$download$$">разделе загрузок</a>.
 </p>
 
@@ -218,7 +218,7 @@ Enigma, воспользуйтесь контрольными суммами в <a href="$$download$$">разделе заг
 <h4><a name="s2q6">Я нашел ошибку!</a></h4>
 <p>Вы можете оставить сообщение об ошибке в рассылке для разработчиков:
 <a href="mailto:enigma-devel@nongnu.org" >enigma-devel@nongnu.org</a>,
-<a href="http://www.mag-heut.net">mag-heut.net</a> или заполнить форму сообщения об ошибке на 
+<a href="http://www.mag-heut.net">mag-heut.net</a> или заполнить форму сообщения об ошибке на
 Berlios: <a href="http://developer.berlios.de/projects/enigma-game/"
 >http://developer.berlios.de/projects/enigma-game/</a>
 потом щёлкните на &quot;Bug Tracking&quot; (&quot;Fehlerverfolgung&quot;) и
@@ -235,13 +235,13 @@ Berlios: <a href="http://developer.berlios.de/projects/enigma-game/"
 <li>Это сиюминутная ошибка или она воспроизводится?</li>
 </ul>
 <p>
-Эти четыре пункта особенно важны. Существует дюжины способов, как 
+Эти четыре пункта особенно важны. Существует дюжины способов, как
 приложение может &quot;рухнуть&quot; или &quot;зависнуть&quot;. Просто опишите,
 что точно Вы сделали, и что высветилось на мониторе сразу после этого.
 Если Вы стали свидетелем &quot;сложной ошибки&quot; (крушение, зависание etc.; а
 не испорченный уровень), пожалуйста, запустите Enigma из консоли с помощью команды
 &quot;enigma --log&quot;
-и попытайтесь воспроизвести ошибку. В директории установки должны появиться два файла 
+и попытайтесь воспроизвести ошибку. В директории установки должны появиться два файла
 stdout.txt и stderr.txt, заполненные значимой для нас информацией. Пожалуйста,
 прикрепите их к Вашему письму нам. (Прочтите также
 <a href="$$support$$#bug">эту страницу</a>).</p>
@@ -310,15 +310,13 @@ Tutorial&quot;, который состоит из более простых уровней для тренировки. Если Вы
 там поясняются.
 </p><p>
 Если Вам нужна подробная информация об объекте, например, если Вы хотите
-написать уровень, посмотрите в <a href="$$refman$$">справочное руководство</a>. 
+написать уровень, посмотрите в <a href="$$refman$$">справочное руководство</a>.
 Однако, для этого Вам нужно знать имя объекта.
 </p><p>
-Если Вы хотите узнать имя объекта, посетите Enigma Wiki на
-<a href="$$wiki$$" >$$wiki$$</a>.</p>
 
 
 <h4><a name="s3q5">Я не могу решить [подставьте любой уровень]!</a></h4>
-<p>Не отчаивайтесь. Существует уйма уровней, чтобы решить которые даже экспертам 
+<p>Не отчаивайтесь. Существует уйма уровней, чтобы решить которые даже экспертам
 нужна неделя.
 </p><p>
 В руководстве есть несколько подсказок и ещё несколько на <a
@@ -385,7 +383,7 @@ href="$$manual$$">руководства</a>.</p>
 
 <h4><a name="s3q11">Можно ли отсылать результаты, которые были получены в версии
 0.92?</a></h4>
-<p>Да. Все результаты, которые несовместимы с уровнями версии 1.00 не будут 
+<p>Да. Все результаты, которые несовместимы с уровнями версии 1.00 не будут
 учитываться в статистике. Вы можете заметить маленький красный треугольник на
 эскизе уровня в меню уровней. Если Вы снова решите этот уровень в версии
 1.00 Ваш новый результат в следующий раз будет учтен.</p>
@@ -451,19 +449,18 @@ FAQ!), нужно немного терпения.</li>
 
 
 <h4><a name="s4q2">Могу я посодействовать Вам материально?</a></h4>
-<p>Мы работаем над этим &hellip; На самом деле мы больше нуждаемся в том, 
+<p>Мы работаем над этим &hellip; На самом деле мы больше нуждаемся в том,
 чтобы Вы помогли нам с задачами, перечисленными <a href="#s4q1">выше</a>.</p>
 
 
 <h4><a name="s4q3">Как мне написать уровень для Enigma?</a></h4>
 <p>Прочтите <a href="$$refman$$">справочное руководство</a>, посетите <a
-href="http://www.mag-heut.net" >mag-heut.net</a>, или изучите 
+href="http://www.mag-heut.net" >mag-heut.net</a>, или изучите
 существующие уровни; они расположены в поддиректориях &quot;data/levels/&#8727;&quot;
-Вашего пути установки. На <a href="$$wiki$$" >$$wiki$$</a> Вы также можете найти
-Enigma Wiki.</p>
+Вашего пути установки.
 <p>
 Если для Вас слишком сложно создать свой уровень, пораспрашивайте людей
-на mag-heut.net &mdash; они могут превратить Ваши идеи в 
+на mag-heut.net &mdash; они могут превратить Ваши идеи в
 настоящий уровень!</p>
 
 
@@ -493,9 +490,7 @@ Mac-ов редакторов пока нет.
 
 <h4><a name="s4q6">Я хочу использовать объект в моём новом уровне, но не знаю
 как он называется.</a></h4>
-<p>Посетите Enigma Wiki
-<a href="$$wiki$$" >$$wiki$$</a> или исследуйте уровень, в котором он есть.</p>
-
+<p>Look into the reference manual or analyze a level in which it appears.</p>
 
 <h4><a name="s4q7">Как мне собрать Enigma под/для Windows?</a></h4>
 <p>Сборка версии Enigma для Windows немного сложнее, чем сборка для Unix.
@@ -521,7 +516,7 @@ doc/README.mingw32.
 </p><p>
 Прежде всего, Вам нужно изолировать lua в рамках 1.00-xml. Вы можете прочитать
 об этом в <a href="$$refman$$">справочном руководстве</a>, разделах 3.2, 3.3, и,
-возможно, 3.5. Можете также взглянуть на 
+возможно, 3.5. Можете также взглянуть на
 <a href="http://enigma.mal2.ch/index.php?title=XML-Metadaten" >http://enigma.mal2.ch/index.php?title=XML-Metadaten</a>,
 но оно на немецком (английском?).
 </p><p>
@@ -542,7 +537,7 @@ doc/README.mingw32.
 
 
 <h4><a name="s4q9">У меня есть мысли по поводу новых объектов Enigma.</a></h4>
-<p>Мы всегда ценим новые идеи и Ваш вклад. У Enigma весьма обширный бестиарий 
+<p>Мы всегда ценим новые идеи и Ваш вклад. У Enigma весьма обширный бестиарий
 объектов. Каждый новый должен удовлетворять некоторым критериям, чтобы получить
 статус значимого дополнения.</p>
 <ul>
@@ -574,7 +569,7 @@ doc/README.mingw32.
 <a href="http://en.wikipedia.org/wiki/GNU_General_Public_License">Wikipedia</a>
 может дать начальное представление об основных обязанностях и правах GPL.</p>
 
-<p>Мы заинтересованы в распространении Enigma. Пожалуйста, дайте нам знать 
+<p>Мы заинтересованы в распространении Enigma. Пожалуйста, дайте нам знать
 и мы даже разместим ссылку на Вашу страницу. Если Вы распространяете Enigma или
 пишете статьи об Enigma в печатных изданиях мы будем рады бесплатно(свободно)
 получить авторскую копию.</p>
@@ -587,7 +582,7 @@ doc/README.mingw32.
 
 <h4><a name="s6q4">Почему службы Enigma размещаются в таких разных местах?
     Что размещается на Berlios, что на nongnu, что на enigma-game.org и т.п.?</a></h4>
-<p>Когда Enigma получила публичные услуги 
+<p>Когда Enigma получила публичные услуги
 <a href="http://savannah.nongnu.org">Savannah (nongnu.org)</a>
 казалась подходящей. Время шло и разработка переключалась между различными хранилищами
 исходного кода наподобие <a href="http://www.gnu.org/software/gnu-arch/">Arch</a>
@@ -599,15 +594,14 @@ Enigma 0.92 мы нашли провайдера, который предложил поддержку репозитория
 на <a href="http://developer.berlios.de/projects/enigma-game">Berlios</a>, а
 более старые репозитории на <a href="http://savannah.nongnu.org/projects/enigma/">Savannah</a>.
 </p>
-<p>Остальные службы, вроде <a href="http://www.mag-heut.net">Forum</a> и
-<a href="$$wiki$$">Wiki</a> появились и продолжают действовать 
-как частные службы, поддерживаемые пользователями Enigma под их адресами.</p>
+<p>Other services like the <a href="http://www.mag-heut.net">Forum</a> started and are
+still running as private services supplied by Enigma users at their addresses.
 
 <p>Домашняя страница всё ещё обслуживается Savannah. Но это ограничивает нас
 статическим содержимым. Поэтому мы зарезервировали домен
 <a href="http://enigma-game.org">enigma-game.org</a>, который, возможно, будет
 использоваться в будущем для таких динамических услуг, как загрузка результатов,
-сервер сетевой игры и другие. Сейчас адрес перенаправляет Вас на Savannah, а мы 
+сервер сетевой игры и другие. Сейчас адрес перенаправляет Вас на Savannah, а мы
 используем по этому адресу только почтовые службы.</p>
 
 
@@ -616,7 +610,7 @@ Enigma?</a></h4>
 <p>Пока нет, но может быть Вы хотите организовать нечто подобное?</p>
 
 <h4><a name="s6q2">Есть ли похожие игры?</a></h4>
-<p>Вы можете попробовать некоторые из старых игр Oxyd&#174;, для этого посетите 
+<p>Вы можете попробовать некоторые из старых игр Oxyd&#174;, для этого посетите
 <a href="http://games.groups.yahoo.com/group/oxyd/">группу Oxyd</a> Yahoo.
 В частности, взгляните на <a
 href="http://www.oxyd-game.com" >www.oxyd-game.com</a>,
@@ -640,7 +634,7 @@ http://www.harbaum.org/till/palm/mulg/</a>.</p>
 Oxyd&#174; Extra v2.0 (<a href="http://www.oxyd-game.com" >www.oxyd-game.com</a>)
 от Jens Duttke.
 </p><p>
-Однако, Enigma с тех пор развилась. Она впитала идеи из многих других игр 
+Однако, Enigma с тех пор развилась. Она впитала идеи из многих других игр
 и эмулирует их в специальных уровнях, наподобие &quot;Enigris&quot;. А ещё для
 неё разработано очень много объектов и игровых идей; и она продолжает жить &hellip;</p>
 </div>
