--- a/homepage/input/menu.html
+++ b/homepage/input/menu.html
@@ -48,13 +48,12 @@
       <ul class="mlist">
         <li><a href="$$development$$">Development</a>
           <ul>
-            <li><a href="http://mail.nongnu.org/mailman/listinfo/enigma-devel">Mailing List<br>
+            <li><a href="https://lists.nongnu.org/mailman/listinfo/enigma-devel">Mailing List<br>
               <span class="menusubtitle">Devel ML (nongnu)</span></a></li>
             <li><a href="$$development$$#tasks">Feature Wishlist</a></li>
             <li><a href="$$development$$#level">Level</a>
               <ul>
                 <li><a href="$$refman$$">Reference Doc</a></li>
-                <!-- <li><a href="$$wiki$$">Manual Wiki</a></li> -->
               </ul>
             </li>
             <li><a href="$$development$$#app">Application<br>
