--- a/homepage/input/menu_de.html
+++ b/homepage/input/menu_de.html
@@ -46,13 +46,12 @@
       <ul class="mlist">
         <li><a href="$$development$$">Entwicklung</a>
           <ul>
-            <li><a href="http://mail.nongnu.org/mailman/listinfo/enigma-devel">Mailing-Liste<br>
+            <li><a href="https://lists.nongnu.org/mailman/listinfo/enigma-devel">Mailing-Liste<br>
               <span class="menusubtitle">Entwickler-ML (nongnu)</span></a></li>
             <li><a href="$$development$$#tasks">Feature Wunschliste</a></li>
             <li><a href="$$development$$#level">Levels</a>
               <ul>
                 <li><a href="$$refman$$">Ref.-Handbuch</a></li>
-                <!-- <li><a href="$$wiki$$">Enigma Wiki</a></li> -->
               </ul>
             </li>
             <li><a href="$$development$$#app">Anwendung<br>
