--- a/homepage/input/menu_ru.html
+++ b/homepage/input/menu_ru.html
@@ -44,13 +44,12 @@
       <ul class="mlist">
         <li><a href="devel_ru.html">Разработка</a>
           <ul>
-            <li><a href="http://mail.nongnu.org/mailman/listinfo/enigma-devel">Рассылка<br>
+            <li><a href="https://lists.nongnu.org/mailman/listinfo/enigma-devel">Рассылка<br>
               <span class="menusubtitle">Рассылка для разработчиков (nongnu)</span></a></li>
             <li><a href="devel_ru.html#tasks">Текущие задачи</a></li>
             <li><a href="devel_ru.html#level">Уровни</a>
               <ul>
                 <li><a href="$$refman$$">Файл справки</a></li>
-                <!-- <li><a href="http://enigma.mal2.ch/index.php?title=Main_Page">Wiki руководства</a></li> -->
               </ul>
             </li>
             <li><a href="devel_ru.html#app">Программа<br>
