--- a/homepage/input/intro-links.html
+++ b/homepage/input/intro-links.html
@@ -1,7 +1,7 @@
   <ul>
   <li><a href="$$download$$">Download Enigma</a></li>
   <li><a href="$$about$$">Learn more about Enigma</a>.</li>
-  <li><a href="http://mail.nongnu.org/mailman/listinfo/enigma-announce">
+  <li><a href="https://lists.nongnu.org/mailman/listinfo/enigma-announce">
 Get notified when versions are released</a>.</li>
   <li><a href="http://www.mag-heut.net">Discuss Enigma!</a></li>
   <li><a href="$$development$$">Contribute to Enigma</a></li>
