Update links to testimonials and press articles (partly linking to archive.org now).

--- a/homepage/input/testimonials.html
+++ b/homepage/input/testimonials.html
@@ -44,7 +44,7 @@ beat some levels!&rdquo;</p>
 &ldquo;This is a fun, original and challenging puzzle game that stretches your
 mind and has many, many levels. The game is also polished, professional, and
 non-violent.&rdquo;</p>
-<p class="author">TuxGamer on <a href="http://happypenguin.org/show?Enigma">Happy Penguin</a>.</p>
+<p class="author">TuxGamer on <a href="https://web.archive.org/web/20111215091938/http://happypenguin.org/show?Enigma&showall=1#comments">Happy Penguin</a>.</p>
 
 <p class="quote">
 &ldquo;I was amazed at what a great game this is. The basic puzzles excellent,
@@ -52,7 +52,7 @@ and ordered very well by difficulty. But also the game is very polished, nice
 graphics and music, very simple user interface. What an outstanding example of
 a polished free software game? Every Linux distribution should include
 Enigma!!!!&rdquo;</p>
-<p class="author">Anonymous on <a href="http://happypenguin.org/show?Enigma">Happy Penguin</a>.</p>
+<p class="author">Anonymous on <a href="https://web.archive.org/web/20111215091938/http://happypenguin.org/show?Enigma&showall=1#comments">Happy Penguin</a>.</p>
 
 <p class="quote">
 &ldquo;But what can I say? I have been playing the puzzle in every spare second
@@ -93,8 +93,8 @@ discover a game style that suits your tastes - so long as you spend the time
 to explore all the options. Enigma might not be the prettiest thing around but
 it's a great freebie with an enormous number of classic remakes and
 original levels to choose from.&rdquo;</p>
-<p class="author">Frank on <a
-href="http://macgameblog.com/archives/Enigma-88.html">The Mac Game Blog</a>
+<p class="author">Frank on <!-
+href="http://macgameblog.com/archives/Enigma-88.html"->The Mac Game Blog
 </p>
 
 <p class="quote">
@@ -104,7 +104,7 @@ everyone, whether you are in the mood for a tough puzzle or a quick test of
 dexterity. I strongly recommend anyone who likes puzzles to download and give
 Enigma a try.&rdquo;</p>
 <p class="author">Ayhoe on <a
-href="http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html"
+href="https://web.archive.org/web/20111111121108/http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html?cat=19"
 >AssociatedContent</a>
 </p>
 
