--- a/homepage/input/testimonials_de.html
+++ b/homepage/input/testimonials_de.html
@@ -54,7 +54,7 @@ gebraucht, um sie zu schlagen!&rdquo;</p>
 das Ihren Geist dehnt und viele, viele Levels hat. Das Spiel ist auch
 ausgefeilt, professionell und gewaltfrei.&rdquo;</p>
 <p class="author">TuxGamer auf <a
-href="http://happypenguin.org/show?Enigma">Happy Penguin</a> (&uuml;bersetzt).</p>
+href="https://web.archive.org/web/20111215091938/http://happypenguin.org/show?Enigma&showall=1#comments">Happy Penguin</a> (&uuml;bersetzt).</p>
 
 <p class="quote">
 &ldquo;Ich war erstaunt, was f&uuml;r ein gro&szlig;artiges Spiel das hier ist. Die
@@ -64,7 +64,7 @@ sehr einfaches Nutzerinterface. Was f&uuml;r ein herausragendes Beispiel eines
 aufpolierten quellfreien Spiels? Jede Linux-Distribution sollte Enigma
 enthalten!!!!&rdquo;</p>
 <p class="author">Anonym auf <a
-href="http://happypenguin.org/show?Enigma">Happy Penguin</a> (&uuml;bersetzt).</p>
+href="https://web.archive.org/web/20111215091938/http://happypenguin.org/show?Enigma&showall=1#comments">Happy Penguin</a> (&uuml;bersetzt).</p>
 
 <p class="quote">
 &ldquo;Aber was kann ich sagen? Ich habe seitdem das R&auml;tsel in jeder freien
@@ -113,8 +113,8 @@ Geschmack abdeckt - solange Sie sich die Zeit nehmen, alle Optionen zu
 erforschen. Enigma ist vielleicht nicht sonderlich sch&ouml;n, aber es ist
 ein gro&szlig;artiges Gratisspiel mit einer enormen Zahl klassischer Remakes
 und origineller Levels, unter denen man w&auml;hlen kann.&rdquo;</p>
-<p class="author">Frank auf <a
-href="http://macgameblog.com/archives/Enigma-88.html">The Mac Game Blog</a>
+<p class="author">Frank auf <!-
+href="http://macgameblog.com/archives/Enigma-88.html"->The Mac Game Blog
 (&uuml;bersetzt)</p>
 
 <p class="quote">
@@ -124,7 +124,7 @@ Spiel hat f&uuml;r jeden etwas, ob man nun Lust auf ein hartes R&auml;tsel oder
 einen schnellen Geschicklichkeitstest hat. Ich empfehle jedem, der R&auml;tsel
 mag, Enigma herunterzuladen und auszuprobieren.&rdquo;</p>
 <p class="author">Ayhoe auf <a
-href="http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html"
+href="https://web.archive.org/web/20111111121108/http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html?cat=19"
 >AssociatedContent</a>
 (&uuml;bersetzt)</p>
 
