--- a/homepage/input/press.html
+++ b/homepage/input/press.html
@@ -6,19 +6,19 @@ In the press</h3>
 <ul>
   <li><a href="http://en.wikipedia.org/wiki/Enigma_%28game%29"
         >Wikipedia</a></li>
-  <li><a href="http://www.happypenguin.org/show?Enigma"
+  <li><a href="https://web.archive.org/web/20111215091938/http://happypenguin.org/show?Enigma"
         >The Linux Game Tome</a></li>
-  <li><a href="http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html"
+  <li><a href="https://web.archive.org/web/20111111121108/http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html?cat=19"
         >AssociatedContent</a></li>
   <li><a href="http://mac.softpedia.com/get/Games/Enigma.shtml"
         >Softpedia</a></li>
-  <li><a href="http://www.versiontracker.com/dyn/moreinfo/macosx/21160&amp;mode=info"
+  <li><a href="https://web.archive.org/web/20100707081929/http://www.versiontracker.com/dyn/moreinfo/macosx/21160&mode=info"
         >VersionTracker</a></li>
   <li><a href="http://www.chip.de/downloads/c1_downloads_19309102.html"
         >Chip Online (German)</a></li>
-  <li><a href="http://software-portal.faz.net/ie/64780/"
+  <li><a href="http://software-portal.faz.net/software/64777/enigma-101.html"
         >FAZ.net (German)</a></li>
-  <li><a href="http://www.opensource-dvd.de/spiele1.htm#enigma"
+  <li><a href="http://www.opensource-dvd.de/spiele/enigma.htm"
         >Opensource-DVD (German)</a></li>
   <!--<li><a href="http://www.bonnsite.de/softtip.html?action=show&amp;number=154"
         >Bonnsite (German)</a></li>-->
@@ -35,9 +35,9 @@ In the press</h3>
         </a></li>
 </ul>
 
-<p>On &quot;Linux Game Tome&quot;, Enigma even is considered to be one of the
+<p>On &quot;Linux Game Tome&quot;, Enigma was even considered to be one of the
 highest rated games for Linux (as of November 2007), see
-<a href="http://www.happypenguin.org/list?sort=avg_rating">here</a>.</p>
+<a href="https://web.archive.org/web/20071011021822/http://www.happypenguin.org/list?sort=avg_rating">here</a>.</p>
 
 <p>If you notice or publish yourself an article please let us know
 (<a href="mailto:enigma-devel@nongnu.org">enigma-devel@nongnu.org</a>).</p>
