--- a/homepage/input/press_de.html
+++ b/homepage/input/press_de.html
@@ -6,19 +6,19 @@ In der Presse</h3>
 <ul>
   <li><a href="http://en.wikipedia.org/wiki/Enigma_%28game%29"
         >Wikipedia (englisch)</a></li>
-  <li><a href="http://www.happypenguin.org/show?Enigma"
+  <li><a href="https://web.archive.org/web/20111215091938/http://happypenguin.org/show?Enigma"
         >The Linux Game Tome (englisch)</a></li>
-  <li><a href="http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html"
+  <li><a href="https://web.archive.org/web/20111111121108/http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html?cat=19"
         >AssociatedContent (englisch)</a></li>
   <li><a href="http://mac.softpedia.com/get/Games/Enigma.shtml"
         >Softpedia (englisch)</a></li>
-  <li><a href="http://www.versiontracker.com/dyn/moreinfo/macosx/21160&amp;mode=info"
+  <li><a href="https://web.archive.org/web/20100707081929/http://www.versiontracker.com/dyn/moreinfo/macosx/21160&mode=info"
         >VersionTracker (englisch)</a></li>
   <li><a href="http://www.chip.de/downloads/c1_downloads_19309102.html"
         >Chip Online (deutsch)</a></li>
-  <li><a href="http://software-portal.faz.net/ie/64780/"
+  <li><a href="http://software-portal.faz.net/software/64777/enigma-101.html"
         >FAZ.net (deutsch)</a></li>
-  <li><a href="http://www.opensource-dvd.de/spiele1.htm#enigma"
+  <li><a href="http://www.opensource-dvd.de/spiele/enigma.htm"
         >Opensource-DVD (deutsch)</a></li>
   <!--<li><a href="http://www.bonnsite.de/softtip.html?action=show&amp;number=154"
         >Bonnsite (deutsch)</a></li>-->
@@ -27,7 +27,7 @@ In der Presse</h3>
   <li><a href="http://www.holarse-linuxgaming.de/wiki/enigma"
         >Holarse (deutsch, 1.20)</a> mit einem
       <a href="http://www.holarse-linuxgaming.de/news/denkpuzzlespiel_enigma_neuer_version_12_ver%C3%B6ffentlicht"
-        >Artikel über das 1.20-Release</a></li>
+        >Artikel &uuml;ber das 1.20-Release</a></li>
   <li><a href="http://www.computerbild.de/download/Enigma-7766.html"
         >Computer Bild (deutsch)<br>
         <img src="images/computer-bild_top-250_downloads-logo.jpg"
@@ -35,9 +35,9 @@ In der Presse</h3>
         </a></li>
 </ul>
 
-<p>Auf &quot;Linux Game Tome&quot; wird Enigma sogar als eines der am
+<p>Auf &quot;Linux Game Tome&quot; wurde Enigma sogar als eines der am
 h&ouml;chsten bewerteten Spiele f&uuml;r Linux gez&auml;hlt (November 2007),
-siehe <a href="http://www.happypenguin.org/list?sort=avg_rating">hier</a>
+siehe <a href="https://web.archive.org/web/20071011021822/http://www.happypenguin.org/list?sort=avg_rating">hier</a>
 (englisch).</p>
 
 <p>Wenn Ihnen ein Artikel auff&auml;llt, oder Sie einen ver&ouml;ffentlichen,
