--- a/homepage/input/press_ru.html
+++ b/homepage/input/press_ru.html
@@ -6,24 +6,28 @@
 <ul>
   <li><a href="http://en.wikipedia.org/wiki/Enigma_%28game%29"
         >Wikipedia</a></li>
-  <li><a href="http://www.happypenguin.org/show?Enigma"
+  <li><a href="https://web.archive.org/web/20111215091938/http://happypenguin.org/show?Enigma"
         >The Linux Game Tome</a></li>
-  <li><a href="http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html"
+  <li><a href="https://web.archive.org/web/20111111121108/http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html?cat=19"
         >AssociatedContent</a></li>
   <li><a href="http://mac.softpedia.com/get/Games/Enigma.shtml"
         >Softpedia</a></li>
-  <li><a href="http://www.versiontracker.com/dyn/moreinfo/macosx/21160&amp;mode=info"
+  <li><a href="https://web.archive.org/web/20100707081929/http://www.versiontracker.com/dyn/moreinfo/macosx/21160&mode=info"
         >VersionTracker</a></li>
   <li><a href="http://www.chip.de/downloads/c1_downloads_19309102.html"
         >Chip Online (немецкий)</a></li>
-  <li><a href="http://software-portal.faz.net/ie/64780/"
+  <li><a href="http://software-portal.faz.net/software/64777/enigma-101.html"
         >FAZ.net (немецкий)</a></li>
-  <li><a href="http://www.opensource-dvd.de/spiele1.htm#enigma"
+  <li><a href="http://www.opensource-dvd.de/spiele/enigma.htm"
         >Opensource-DVD (немецкий)</a></li>
   <!--<li><a href="http://www.bonnsite.de/softtip.html?action=show&amp;number=154"
         >Bonnsite (немецкий)</a></li>-->
   <li><a href="http://www.heise.de/software/download/enigma/20301a24917"
         >Heise (немецкий, 0.81)</a></li>
+  <li><a href="http://www.holarse-linuxgaming.de/wiki/enigma"
+        >Holarse (немецкий, 1.20)</a> with an
+      <a href="http://www.holarse-linuxgaming.de/news/denkpuzzlespiel_enigma_neuer_version_12_ver%C3%B6ffentlicht"
+        >article about the 1.20-release (немецкий)</a></li>
   <li><a href="http://www.computerbild.de/download/Enigma-7766.html"
         >Computer Bild (немецкий)<br>
         <img src="images/computer-bild_top-250_downloads-logo.jpg"
@@ -33,7 +37,7 @@
 
 <p>На &quot;Linux Game Tome&quot;, Enigma даже считается одной из самых
 высокооцениваемых игр для Linux (по состоянию на Ноябрь 2007), смотрите
-<a href="http://www.happypenguin.org/list?sort=avg_rating">здесь</a>.</p>
+<a href="https://web.archive.org/web/20071011021822/http://www.happypenguin.org/list?sort=avg_rating">здесь</a>.</p>
 
 <p>Если Вы нашли или опубликовали собственную статью, пожалуйста, сообщите нам
 (<a href="mailto:enigma-devel@nongnu.org">enigma-devel@nongnu.org</a>).</p>
