--- a/homepage/input/testimonials_ru.html
+++ b/homepage/input/testimonials_ru.html
@@ -42,7 +42,7 @@
 <p class="quote">
 &ldquo;Это захватывающая, оригинальная игра, которая бросает вызов Вашему разуму
 и содержит множество уровней. Кроме того она безупречна, профессиональна и ненапрягающая.&rdquo;</p>
-<p class="author">TuxGamer на <a href="http://happypenguin.org/show?Enigma">Happy Penguin</a>.</p>
+<p class="author">TuxGamer на <a href="https://web.archive.org/web/20111215091938/http://happypenguin.org/show?Enigma&showall=1#comments">Happy Penguin</a>.</p>
 
 <p class="quote">
 &ldquo;Я был поражён величием этой игры. Основные головоломки великолепны
@@ -50,7 +50,7 @@
 замечательная графика и музыкальное оформление, простой пользовательский
 интерфейс. Что за выдающийся пример безупречной свободно распространяемой игры?
 Каждый дистрибутив Linux должен включать Enigma!!!!&rdquo;</p>
-<p class="author">Anonymous на <a href="http://happypenguin.org/show?Enigma">Happy Penguin</a>.</p>
+<p class="author">Anonymous на <a href="https://web.archive.org/web/20111215091938/http://happypenguin.org/show?Enigma&showall=1#comments">Happy Penguin</a>.</p>
 
 <p class="quote">
 &ldquo;Что я могу сказать? В свободную минутку я всегда играю в головоломки
@@ -94,8 +94,8 @@ Enigma!&rdquo;</p>
 Enigma и не лучше всех, но это великая свободно распространяемая игра с огромным
 числом ремейков классических и собственных уровней, чтобы было из чего
 выбирать.&rdquo;</p>
-<p class="author">Frank на <a
-href="http://macgameblog.com/archives/Enigma-88.html">The Mac Game Blog</a>
+<p class="author">Frank на <!-
+href="http://macgameblog.com/archives/Enigma-88.html"->The Mac Game Blog
 </p>
 
 <p class="quote">
@@ -104,7 +104,7 @@ href="http://macgameblog.com/archives/Enigma-88.html">The Mac Game Blog</a>
 нравятся ли Вам крепкие головоломки или быстрая проверка на ловкость. Я очень
 рекомендую каждому, кому нравятся головоломки, скачать и попробовать Enigma.&rdquo;</p>
 <p class="author">Ayhoe на <a
-href="http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html"
+href="https://web.archive.org/web/20111111121108/http://www.associatedcontent.com/article/335780/enigma_classic_memory_game_meets_fastpaced.html?cat=19"
 >AssociatedContent</a>
 </p>
 
